--- a/index.html
+++ b/index.html
@@ -36,36 +36,70 @@
 
   <!-- יתרונות -->
   <section class="benefits">
-    <h2>למה לבחור ב-BDO?</h2>
-    <h3>יש לך את כל הסיבות להתמחות אצלנו!</h3>
-    <div class="benefit-grid">
-      <div class="benefit-card">
-        <div class="icon-circle">💼</div>
-        <h3>תהליך חניכה מסודר</h3>
-        <p>לכל מתמחה מוצמד "חונך" שמלווה אותו מקצועית ואישית</p>
+  <h2>למה לבחור ב-BDO?</h2>
+  <h3>יש לך את כל הסיבות להתמחות אצלנו!</h3>
+  <div class="benefit-grid">
+    
+    <div class="benefit-card">
+      <div class="icon-wrapper">
+        <svg class="benefit-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+          <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+          <circle cx="9" cy="7" r="4"></circle>
+          <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+          <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+        </svg>
       </div>
-      <div class="benefit-card">
-        <div class="icon-circle">📊</div>
-        <h3>עתודה ניהולית</h3>
-        <p>עובדים אשר מיועדים למסלול ניהול , מקבלים הכשרה ופיתוח אישי בעתודה ניהולית ייעודית</p>
-      </div>
-      <div class="benefit-card">
-        <div class="icon-circle">👥</div>
-        <h3>הכנה לבחינות מועצה</h3>
-        <p>גמישות בתקופת הלימודים והבחינות</p>
-      </div>
-      <div class="benefit-card">
-        <div class="icon-circle">📈</div>
-        <h3>תחומי התמחות מגוונים</h3>
-        <p>אפשרות להתמחות מול מגוון תיקים ולקוחות</p>
-      </div>
-      <div class="benefit-card">
-        <div class="icon-circle">🔄</div>
-        <h3>אפשרויות ניוד</h3>
-        <p>חשיפה ללקוחות ותחומים שונים ומגוונים, במטרה להרחיב את הידע ולייצר עניין בתפקיד</p>
-      </div>
+      <h3>תהליך חניכה מסודר</h3>
+      <p>לכל מתמחה מוצמד "חונך" שמלווה אותו מקצועית ואישית</p>
     </div>
-  </section>
+
+    <div class="benefit-card">
+      <div class="icon-wrapper">
+        <svg class="benefit-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+          <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"></path>
+          <circle cx="9" cy="7" r="4"></circle>
+          <polyline points="17 11 19 13 23 9"></polyline>
+        </svg>
+      </div>
+      <h3>עתודה ניהולית</h3>
+      <p>עובדים אשר מיועדים למסלול ניהול, מקבלים הכשרה ופיתוח אישי בעתודה ניהולית ייעודית</p>
+    </div>
+
+    <div class="benefit-card">
+      <div class="icon-wrapper">
+        <svg class="benefit-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+          <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+          <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+        </svg>
+      </div>
+      <h3>הכנה לבחינות מועצה</h3>
+      <p>גמישות בתקופת הלימודים והבחינות</p>
+    </div>
+
+    <div class="benefit-card">
+      <div class="icon-wrapper">
+        <svg class="benefit-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+          <rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect>
+          <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+        </svg>
+      </div>
+      <h3>תחומי התמחות מגוונים</h3>
+      <p>אפשרות להתמחות מול מגוון תיקים ולקוחות</p>
+    </div>
+
+    <div class="benefit-card">
+      <div class="icon-wrapper">
+        <svg class="benefit-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+          <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
+          <polyline points="17 6 23 6 23 12"></polyline>
+        </svg>
+      </div>
+      <h3>אפשרויות ניוד</h3>
+      <p>חשיפה ללקוחות ותחומים שונים ומגוונים, במטרה להרחיב את הידע ולייצר עניין בתפקיד</p>
+    </div>
+
+  </div>
+</section>
 
   <!-- שלבי תהליך הגיוס -->
   <section class="steps-section">
