--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="top-banner-content">
       <h1>הגיע הזמן לקחת את העתיד שלכם בחשבון!</h1>
       <p>תהליכי המיון לפירמת BDO בעיצומם</p>
-      <strong>מועדי גיוס 2026 ו-2027</strong>   
+      <עםstrong>מועדי גיוס 2026 ו-2027</strong>   
     </div>
   </section>
 
@@ -160,7 +160,8 @@
         
         <!-- Step 1 Details -->
         <div class="step-details active" data-content="1">
-          <p>יש להעלות את קו"ח לאתר ולהגיש מועמדות ולאחר מכן צוות מחלקת הגיוס יצור איתם קשר לקבלת אישור 2/3 וגיליון ציונים.</p>
+          <p>יש להעלות את קו"ח לאתר ולהגיש מועמדות ולאחר מכן צוות מחלקת הגיוס יצור איתכם
+             קשר לקבלת אישור 2/3 וגיליון ציונים.</p>
         </div>
 
         <!-- Step 2 Details -->
@@ -175,7 +176,7 @@
 
         <!-- Step 4 Details -->
         <div class="step-details" data-content="4">
-          <p>בשלב הזה תיפגשו עם אחד השותפים בצוות שאליו שובצתם. זו הזדמנות להכיר את מי שילווה אתכם בהתמחות, לשאול שאלות, להבין את הכיוון - ולוודא שיש התאמה הדדית לפני שממשיכים יחד. לעיתים תתקיים משימה או מטלה מקצועית קצרה על מנת לבחון התאמה לאחר שלב זה.</p>
+          <p>בשלב הזה תפגשו עם אחד השותפים בצוות שאליו שובצתם. זו הזדמנות להכיר את מי שילווה אתכם בהתמחות, לשאול שאלות, להבין את הכיוון - ולוודא שיש התאמה הדדית לפני שממשיכים יחד. לעיתים תתקיים משימה או מטלה מקצועית קצרה על מנת לבחון התאמה לאחר שלב זה.</p>
         </div>
 
         <!-- Step 5 Details -->
@@ -219,10 +220,10 @@
     </div>
 
     <!-- FAQ Item 4 -->
-    <div class="faq-item">
-      <div class="faq-question"><span class="arrow">▶</span> האם אפשר להשתלב במשרת סטודנט?</div>
-      <div class="faq-answer">מומלץ לבדוק מול מחלקת הגיוס את האפשרות להשתלב במשרת סטודנט או טרום התמחות, מאחר שהזמינות והדרישות עשויות להשתנות מעת לעת. בדרך כלל, משרת סטודנט דורשת התחייבות ללפחות 3 ימי עבודה מלאים בשבוע. זו הזדמנות מצוינת להכיר את הפירמה ולצבור ניסיון מקצועי עוד לפני תחילת ההתמחות הרשמית.</div>
-    </div>
+<div class="faq-item">
+  <div class="faq-question"><span class="arrow">▶</span> האם אפשר להשתלב במשרת סטודנט?</div>
+  <div class="faq-answer">מומלץ לבדוק מול מחלקת הגיוס את האפשרות להשתלב במשרת סטודנט או טרום התמחות, מאחר שהזמינות והדרישות עשויות להשתנות מעת לעת. בדרך כלל, משרת סטודנט דורשת התחייבות לפחות <strong>3 ימי עבודה מלאים בשבוע.</strong> זו הזדמנות מצוינת להכיר את הפירמה ולצבור ניסיון מקצועי עוד לפני תחילת ההתמחות הרשמית.</div>
+</div>
 
     <!-- FAQ Item 5 -->
     <div class="faq-item">
