--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 
   <!-- Top Banner Section -->
-  <section class="top-banner">
+   <section class="top-banner">
     <img src="images/bdo-logo.png" alt="BDO Logo" class="banner-logo">
     <div class="top-banner-content">
       <h1>הגיע הזמן לקחת את העתיד שלכם בחשבון!</h1>
       <p>תהליכי המיון לפירמת BDO בעיצומם</p>
-      <עםstrong>מועדי גיוס 2026 ו-2027</strong>   
+      <strong>מועדי גיוס 2026 ו-2027</strong>   
     </div>
   </section>
 
@@ -222,7 +222,7 @@
     <!-- FAQ Item 4 -->
 <div class="faq-item">
   <div class="faq-question"><span class="arrow">▶</span> האם אפשר להשתלב במשרת סטודנט?</div>
-  <div class="faq-answer">מומלץ לבדוק מול מחלקת הגיוס את האפשרות להשתלב במשרת סטודנט או טרום התמחות, מאחר שהזמינות והדרישות עשויות להשתנות מעת לעת. בדרך כלל, משרת סטודנט דורשת התחייבות לפחות <strong>3 ימי עבודה מלאים בשבוע.</strong> זו הזדמנות מצוינת להכיר את הפירמה ולצבור ניסיון מקצועי עוד לפני תחילת ההתמחות הרשמית.</div>
+  <div class="faq-answer">מומלץ לבדוק מול מחלקת הגיוס את האפשרות להשתלב במשרת סטודנט או טרום התמחות, מאחר שהזמינות והדרישות עשויות להשתנות מעת לעת. בדרך כלל, משרת סטודנט דורשת התחייבות ללפחות <strong>3 ימי עבודה מלאים בשבוע.</strong> זו הזדמנות מצוינת להכיר את הפירמה ולצבור ניסיון מקצועי עוד לפני תחילת ההתמחות הרשמית.</div>
 </div>
 
     <!-- FAQ Item 5 -->
