--- a/index.html
+++ b/index.html
@@ -57,7 +57,16 @@
       <div class="benefit-card">
         <div class="icon-wrapper">
           <svg class="icon-svg" viewBox="0 0 24 24">
-            <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/>
+            <!-- Target circles -->
+            <circle cx="12" cy="12" r="10" stroke-width="2.5"/>
+            <circle cx="12" cy="12" r="6" stroke-width="2.5"/>
+            <circle cx="12" cy="12" r="2" stroke-width="2.5"/>
+            <!-- Arrow coming from top-left -->
+            <line x1="2" y1="2" x2="10" y2="10" stroke-width="3" stroke-linecap="round"/>
+            <!-- Arrow tip -->
+            <line x1="10" y1="10" x2="12" y2="12" stroke-width="3" stroke-linecap="round"/>
+            <!-- Arrowhead -->
+            <polyline points="7,10 10,10 10,7" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </div>
         <h3>עתודה ניהולית</h3>
@@ -70,6 +79,9 @@
           <svg class="icon-svg" viewBox="0 0 24 24">
             <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
             <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
+            <line x1="9" y1="7" x2="17" y2="7"/>
+            <line x1="9" y1="11" x2="17" y2="11"/>
+            <line x1="9" y1="15" x2="17" y2="15"/>
           </svg>
         </div>
         <h3>הכנה לבחינות מועצה</h3>
@@ -82,6 +94,7 @@
           <svg class="icon-svg" viewBox="0 0 24 24">
             <circle cx="12" cy="12" r="10"/>
             <line x1="2" y1="12" x2="22" y2="12"/>
+            <line x1="12" y1="2" x2="12" y2="22"/>
             <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
           </svg>
         </div>
@@ -93,9 +106,9 @@
       <div class="benefit-card">
         <div class="icon-wrapper">
           <svg class="icon-svg" viewBox="0 0 24 24">
-            <path d="M21.5 2v6h-6"/>
-            <path d="M21 2l-7.5 7.5"/>
-            <path d="M16 12v6a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h6"/>
+            <polyline points="23 4 23 10 17 10" stroke-linecap="round" stroke-linejoin="round"/>
+            <polyline points="1 20 1 14 7 14" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </div>
         <h3>אפשרויות ניוד</h3>
@@ -192,7 +205,7 @@
       <div class="carousel-wrapper">
         <button class="carousel-arrow prev-arrow" onclick="changeSlide(-1)">
           <svg viewBox="0 0 24 24" width="20" height="20">
-            <polyline points="15 18 9 12 15 6" stroke="currentColor" fill="none" stroke-width="3"/>
+            <polyline points="9 18 15 12 9 6" stroke="currentColor" fill="none" stroke-width="3"/>
           </svg>
         </button>
         
@@ -255,7 +268,7 @@
 
         <button class="carousel-arrow next-arrow" onclick="changeSlide(1)">
           <svg viewBox="0 0 24 24" width="20" height="20">
-            <polyline points="9 18 15 12 9 6" stroke="currentColor" fill="none" stroke-width="3"/>
+            <polyline points="15 18 9 12 15 6" stroke="currentColor" fill="none" stroke-width="3"/>
           </svg>
         </button>
       </div>
