--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
-      <h1>מתלבט לגבי ההתמחות שלך? אנחנו כאן בשבילך.</h1>
+      <h1>מתלבט.ת לגבי ההתמחות שלך? אנחנו כאן בשבילך.</h1>
       <div class="info-box">
         אם הגעת לכאן, כנראה שאת.ה שוקל.ת את הצעד הראשון בקריירה שלך בתחום ראיית החשבון ואנחנו ב BDO מזמינים אותך לעשות אותו איתנו.
         יצרנו עבורך מרחב שמרכז את כל המידע שחשוב לדעת על תהליך ההתמחות,
@@ -113,6 +113,22 @@
         </div>
         <h3>אפשרויות ניוד</h3>
         <p>חשיפה ללקוחות ותחומים שונים ומגוונים, במטרה להרחיב את הידע ולייצר עניין בתפקיד</p>
+      </div>
+      
+      <!-- Benefit Card 6 - NEW -->
+      <div class="benefit-card">
+        <div class="icon-wrapper">
+          <svg class="icon-svg" viewBox="0 0 24 24">
+            <!-- Person 1 (left) -->
+            <circle cx="7" cy="7" r="3"/>
+            <path d="M2 20v-2a4 4 0 0 1 4-4h2a4 4 0 0 1 4 4v2"/>
+            <!-- Person 2 (right) -->
+            <circle cx="17" cy="7" r="3"/>
+            <path d="M12 20v-2a4 4 0 0 1 4-4h2a4 4 0 0 1 4 4v2"/>
+          </svg>
+        </div>
+        <h3>ניהול בגובה העיניים</h3>
+        <p>מנהלים שמקשיבים, זמינים ותומכים, עם אווירה משפחתית שמלווה אתכם לאורך כל הדרך</p>
       </div>
     </div>
   </section>
@@ -287,7 +303,7 @@
   <!-- Apply Section -->
   <section class="apply-section">
     <div class="apply-container">
-      <h2>מוכן להגיש מועמדות?</h2>
+      <h2>מוכן.ה להגיש מעומדות?</h2>
       <a class="cta-button" href="https://eur03.safelinks.protection.outlook.com/?url=https%3A%2F%2Fbdo-career.hunterhrms.com%2F%25D7%259B%25D7%259C-%25D7%2594%25D7%259E%25D7%25A9%25D7%25A8%25D7%2595%25D7%25AA%2F&data=05%7C02%7CNechamaC%40bdo.co.il%7C5fce629a074241a34dd208de1214c791%7C3c054339d6c24bdcb99e4aeb43de91ec%7C0%7C0%7C638968077651682528%7CUnknown%7CTWFpbGZsb3d8eyJFbXB0eU1hcGkiOnRydWUsIlYiOiIwLjAuMDAwMCIsIlAiOiJXaW4zMiIsIkFOIjoiTWFpbCIsIldUIjoyfQ%3D%3D%7C0%7C%7C%7C&sdata=fZbDV1T6KB0KZFsvJOacvw3xv4w25xt6jPEH4Fwl2%2Fg%3D&reserved=0" target="_blank">
         <span>לאתר קרירה שלנו  ←</span>
       </a> 
@@ -325,7 +341,7 @@
     <!-- FAQ Item 5 -->
     <div class="faq-item">
       <div class="faq-question"><span class="arrow">▶</span> מה שואלים בראיון הגיוס?</div>
-      <div class="faq-answer">בראיון איתנו, צוות הגיוס, נרצה להכיר אתכם יותר - מה מניע אתכם, מה הציפיות שלכם, איך אתם רואים את עצמכם בעתיד. זה גם הזדמנות עבורכם לשאול שאלות ולהבין אם BDO מתאימה לכם.</div>
+      <div class="faq-answer">בראיון איתנו, צוות הגיוס, נרצה להכיר אתכם יותר - מה מניע אתכם, מה הציפיות שלכם, איך אתם רואים את עצמכם בעתיד. זו גם הזדמנות עבורכם לשאול שאלות ולהבין אם BDO מתאימה לכם.</div>
     </div>
   </section>
 
