--- a/index.html
+++ b/index.html
@@ -316,25 +316,25 @@
 
     <!-- FAQ Item 1 -->
     <div class="faq-item">
-      <div class="faq-question"><span class="arrow">▶</span> מהו משך התהליך?</div>
+      <div class="faq-question"><span class="arrow">&#9654;</span> מהו משך התהליך?</div>
       <div class="faq-answer">תיאום המבדק הפסיכוטכני יתבצע למול לוחות זמנים אישיים של המועמדים. התהליך כולו נמשך בדרך כלל מספר שבועות, תלוי בזמינות ובקצב התקדמות המועמד בין השלבים השונים.</div>
     </div>
 
     <!-- FAQ Item 2 -->
     <div class="faq-item">
-      <div class="faq-question"><span class="arrow">▶</span> אם לא עברתי ראיון שותף?</div>
+      <div class="faq-question"><span class="arrow">&#9654;</span> אם לא עברתי ראיון שותף?</div>
       <div class="faq-answer">זה ממש לא סוף הדרך. לפעמים זה פשוט עניין של התאמה לצוות או לתחום מסוים. אנחנו שומרים על קשר עם מועמדים איכותיים ועשויים לחזור אליך בהזדמנויות עתידיות או לצוותים אחרים.</div>
     </div>
 
     <!-- FAQ Item 3 -->
     <div class="faq-item">
-      <div class="faq-question"><span class="arrow">▶</span> מה רמת האנגלית הנדרשת להתמחות בפירמה?</div>
+      <div class="faq-question"><span class="arrow">&#9654;</span> מה רמת האנגלית הנדרשת להתמחות בפירמה?</div>
       <div class="faq-answer">במהלך המבדקים הפסיכוטכניים נבחנת גם רמת האנגלית שלכם. אנחנו מחפשים רמה טובה של אנגלית, במיוחד קריאה והבנה, כיוון שחלק מהלקוחות והמסמכים הם בינלאומיים.</div>
     </div>
 
     <!-- FAQ Item 4 -->
 <div class="faq-item">
-  <div class="faq-question"><span class="arrow">▶</span> האם אפשר להשתלב במשרת סטודנט?</div>
+  <div class="faq-question"><span class="arrow">&#9654;</span> האם אפשר להשתלב במשרת סטודנט?</div>
   <div class="faq-answer">מומלץ לבדוק מול מחלקת הגיוס את האפשרות להשתלב במשרת סטודנט או טרום התמחות, מאחר שהזמינות והדרישות עשויות להשתנות מעת לעת. בדרך כלל, משרת סטודנט דורשת התחייבות ללפחות <strong>3 ימי עבודה מלאים בשבוע.</strong> זו הזדמנות מצוינת להכיר את הפירמה ולצבור ניסיון מקצועי עוד לפני תחילת ההתמחות הרשמית.</div>
 </div>
 
